// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Blogpost matches snapshot 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "Blogpost",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "where",
                },
                "value": Object {
                  "fields": Array [
                    Object {
                      "kind": "ObjectField",
                      "name": Object {
                        "kind": "Name",
                        "value": "slug",
                      },
                      "value": Object {
                        "kind": "Variable",
                        "name": Object {
                          "kind": "Name",
                          "value": "slug",
                        },
                      },
                    },
                  ],
                  "kind": "ObjectValue",
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "blogpost",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "excerpt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "slug",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "title",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "type",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "content",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "ytvideo",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "updatedAt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "createdAt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "previewImage",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "size1_1",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "image",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "resize",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "height",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "1000",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "fit",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "crop",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "width",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "1000",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "size4_3",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "image",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "resize",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "height",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "750",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "fit",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "crop",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "width",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "1000",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "size16_9",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "image",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "resize",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "height",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "562",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "fit",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "crop",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "width",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "1000",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "sizeOG",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "image",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "resize",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "height",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "627",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "fit",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "crop",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "width",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "1200",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "directives": Array [],
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "String",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "slug",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 1004,
    "source": Object {
      "body": "
  query Blogpost($slug: String!) {
    blogpost(where: { slug: $slug }) {
      id
      excerpt
      slug
      title
      type
      content
      ytvideo
      updatedAt
      createdAt
      previewImage {
        size1_1: url(
          transformation: {
            document: { output: { format: jpg } }
            image: { resize: { height: 1000, fit: crop, width: 1000 } }
          }
        )
        size4_3: url(
          transformation: {
            document: { output: { format: jpg } }
            image: { resize: { height: 750, fit: crop, width: 1000 } }
          }
        )
        size16_9: url(
          transformation: {
            document: { output: { format: jpg } }
            image: { resize: { height: 562, fit: crop, width: 1000 } }
          }
        )
        sizeOG: url(
          transformation: {
            document: { output: { format: jpg } }
            image: { resize: { height: 627, fit: crop, width: 1200 } }
          }
        )
      }
    }
  }
",
      "locationOffset": Object {
        "column": 1,
        "line": 1,
      },
      "name": "GraphQL request",
    },
    "start": 0,
  },
}
`;

exports[`Query BlogpostsPreview matches snapshot 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "BlogpostsPreview",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "first",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "first",
                  },
                },
              },
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "skip",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "skip",
                  },
                },
              },
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "orderBy",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "orderBy",
                  },
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "blogposts",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "excerpt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "slug",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "title",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "type",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "updatedAt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "createdAt",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "previewImage",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "image",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "resize",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "height",
                                              },
                                              "value": Object {
                                                "kind": "IntValue",
                                                "value": "400",
                                              },
                                            },
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "fit",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "crop",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          Object {
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "blogpostsConnection",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "aggregate",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "count",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "value": "18",
          },
          "directives": Array [],
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "Int",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "first",
            },
          },
        },
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "value": "0",
          },
          "directives": Array [],
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "Int",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "skip",
            },
          },
        },
        Object {
          "defaultValue": Object {
            "kind": "EnumValue",
            "value": "createdAt_DESC",
          },
          "directives": Array [],
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "BlogpostOrderByInput",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "orderBy",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 562,
    "source": Object {
      "body": "
  query BlogpostsPreview(
    $first: Int! = 18
    $skip: Int! = 0
    $orderBy: BlogpostOrderByInput! = createdAt_DESC
  ) {
    blogposts(first: $first, skip: $skip, orderBy: $orderBy) {
      id
      excerpt
      slug
      title
      type
      updatedAt
      createdAt
      previewImage {
        url(
          transformation: {
            document: { output: { format: jpg } }
            image: { resize: { height: 400, fit: crop } }
          }
        )
      }
    }
    blogpostsConnection {
      aggregate {
        count
      }
    }
  }
",
      "locationOffset": Object {
        "column": 1,
        "line": 1,
      },
      "name": "GraphQL request",
    },
    "start": 0,
  },
}
`;

exports[`Query ImageCollectionPortfolio matches snapshot 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "ImageCollectionPortfolio",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "where",
                },
                "value": Object {
                  "fields": Array [
                    Object {
                      "kind": "ObjectField",
                      "name": Object {
                        "kind": "Name",
                        "value": "imageType",
                      },
                      "value": Object {
                        "kind": "EnumValue",
                        "value": "portfolio",
                      },
                    },
                  ],
                  "kind": "ObjectValue",
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "imgCollection",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "collection",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "jpg_url",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "webp_url",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "webp",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 328,
    "source": Object {
      "body": "
  query ImageCollectionPortfolio {
    imgCollection(where: { imageType: portfolio }) {
      id
      collection {
        id
        jpg_url: url(transformation: { document: { output: { format: jpg } } })
        webp_url: url(
          transformation: { document: { output: { format: webp } } }
        )
      }
    }
  }
",
      "locationOffset": Object {
        "column": 1,
        "line": 1,
      },
      "name": "GraphQL request",
    },
    "start": 0,
  },
}
`;

exports[`Query imageCollectionHome matches snapshot 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "imageCollectionHome",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "where",
                },
                "value": Object {
                  "fields": Array [
                    Object {
                      "kind": "ObjectField",
                      "name": Object {
                        "kind": "Name",
                        "value": "imageType",
                      },
                      "value": Object {
                        "kind": "EnumValue",
                        "value": "home",
                      },
                    },
                  ],
                  "kind": "ObjectValue",
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "imgCollection",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
                Object {
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "collection",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "jpg_url",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "jpg",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "webp_url",
                        },
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "transformation",
                            },
                            "value": Object {
                              "fields": Array [
                                Object {
                                  "kind": "ObjectField",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "document",
                                  },
                                  "value": Object {
                                    "fields": Array [
                                      Object {
                                        "kind": "ObjectField",
                                        "name": Object {
                                          "kind": "Name",
                                          "value": "output",
                                        },
                                        "value": Object {
                                          "fields": Array [
                                            Object {
                                              "kind": "ObjectField",
                                              "name": Object {
                                                "kind": "Name",
                                                "value": "format",
                                              },
                                              "value": Object {
                                                "kind": "EnumValue",
                                                "value": "webp",
                                              },
                                            },
                                          ],
                                          "kind": "ObjectValue",
                                        },
                                      },
                                    ],
                                    "kind": "ObjectValue",
                                  },
                                },
                              ],
                              "kind": "ObjectValue",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "url",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 318,
    "source": Object {
      "body": "
  query imageCollectionHome {
    imgCollection(where: { imageType: home }) {
      id
      collection {
        id
        jpg_url: url(transformation: { document: { output: { format: jpg } } })
        webp_url: url(
          transformation: { document: { output: { format: webp } } }
        )
      }
    }
  }
",
      "locationOffset": Object {
        "column": 1,
        "line": 1,
      },
      "name": "GraphQL request",
    },
    "start": 0,
  },
}
`;
